--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "erela.js",
-  "version": "2.3.3",
+  "name": "@phamleduy04/erela.js",
+  "version": "2.3.11",
   "description": "An easy-to-use Lavalink client for NodeJS.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": [  "dist" ],
+  "files": [
+    "dist",
+    "typings"
+  ],
   "scripts": {
     "build": "tsc",
     "lint": "eslint --ext .ts ./src",
@@ -31,20 +34,20 @@
   "repository": "MenuDocs/erela.js",
   "bugs": "https://github.com/MenuDocs/erela.js",
   "devDependencies": {
-    "@types/node": "^16.6.1",
-    "@types/ws": "^7.4.7",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.2",
+    "@types/node": "^17.0.23",
+    "@types/ws": "^8.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "dts-bundle": "^0.7.3",
-    "eslint": "^7.7.0",
-    "typedoc": "^0.21.5",
-    "typedoc-plugin-no-inherit": "^1.2.0",
-    "typescript": "^4.3.5"
+    "eslint": "^8.12.0",
+    "typedoc": "^0.22.13",
+    "typedoc-plugin-no-inherit": "^1.3.1",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@discordjs/collection": "^0.2.1",
-    "petitio": "^1.3.2",
-    "ws": "^8.1.0"
+    "@discordjs/collection": "^0.5.0",
+    "undici": "^5.0.0",
+    "ws": "^8.5.0"
   },
   "engines": {
     "node": ">=16.0.0"
