--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist",
-    "typings"
+    "dist"
   ],
   "scripts": {
     "build": "tsc",
@@ -14,7 +13,8 @@
     "types": "dts-bundle --removeSource --name erela.js --main ./dist --out ../typings/index.d.ts --baseDir ./dist",
     "docs": "typedoc --json ./docs.json --mode file --excludeProtected --excludePrivate --excludeExternals src/structures",
     "publish:stable": "yarn build && yarn types && yarn publish --access=public",
-    "publish:beta": "yarn build && yarn types && yarn publish --tag beta --access=public"
+    "publish:beta": "yarn build && yarn types && yarn publish --tag beta --access=public",
+    "pack": "yarn build && yarn types && yarn pack"
   },
   "keywords": [
     "lavalink",
