--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@phamleduy04/erela.js",
-  "version": "2.3.21",
+  "version": "2.3.22",
   "description": "An easy-to-use Lavalink client for NodeJS.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -34,20 +34,20 @@
   "repository": "MenuDocs/erela.js",
   "bugs": "https://github.com/MenuDocs/erela.js",
   "devDependencies": {
-    "@types/node": "^17.0.27",
+    "@types/node": "^17.0.34",
     "@types/ws": "^8.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
     "dts-bundle": "^0.7.3",
-    "eslint": "^8.14.0",
+    "eslint": "^8.15.0",
     "typedoc": "^0.22.15",
     "typedoc-plugin-no-inherit": "^1.3.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.4"
   },
   "dependencies": {
     "@discordjs/collection": "^0.6.0",
-    "undici": "^5.0.0",
-    "ws": "^8.5.0"
+    "undici": "5.2.0",
+    "ws": "^8.6.0"
   },
   "engines": {
     "node": ">=16.0.0"
